@@ -8,6 +8,7 @@
 	all : fixed completion for a type in `expr is Type` (#10167)
 	all : fixed subtypes in `expr is Module.SubType` expressions (#10174)
 	all : fixed typing chains of calls with constrained type params (#10198)
+	all : fixed mixed constraints of anonymous structures and other types (#10162)
 	hl : fixed debugging of `catch` blocks (#10109)
 	jvm : fixed manifest generation for cases with a lot of jar libraries (#10157)
 	js : fixed extending extern classes for es5 (#10192)
